# pomoflow

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-title.yml  release.yml  stale.yml
src/pomoflow/: config.py  display.py  history.py  main.py  notifications.py  stats.py  timer.py
tests/: test_config.py  test_history.py  test_main.py  test_notifications.py  test_stats.py  test_timer.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ConfirmDialog.tsx  History.tsx  MiniTimer.tsx  Settings.tsx  Stats.tsx  Timer.tsx
web/src/context/: AppContext.tsx  TimerContext.tsx
web/src/hooks/: useTimer.ts
web/src/lib/: i18n.ts  sound.ts  storage.ts
