[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pomoflow"
version = "0.1.0"
description = "A focused Pomodoro CLI timer for developers"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "guialmm", email = "guialm211004@gmail.com" }]
requires-python = ">=3.11"
keywords = ["pomodoro", "timer", "cli", "productivity", "focus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "commitizen>=3.27.0",
]

[project.scripts]
pomoflow = "pomoflow.main:app"

[project.urls]
Homepage = "https://github.com/guialmm/pomoflow"
Repository = "https://github.com/guialmm/pomoflow"
Issues = "https://github.com/guialmm/pomoflow/issues"
Changelog = "https://github.com/guialmm/pomoflow/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pomoflow"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pomoflow --cov-report=term-missing"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:^version", "src/pomoflow/__init__.py:^__version__"]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
